--- a/Shop/Views/NguoiDung/Dangnhap.cshtml
+++ b/Shop/Views/NguoiDung/Dangnhap.cshtml
@@ -1,44 +1,76 @@
-﻿<style tyle="text/css">
-    .dangnhap {
-        margin-top: 20px;
-    }
-</style>
-@{
+﻿@{
     ViewBag.Title = "Dangnhap";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<br />
-<h5 style="color:red; text-align:center"> @ViewBag.Thongbao</h5>
-<h4 style="text-align:center">ĐĂNG NHẬP</h4>
-@using (Html.BeginForm())
-{
-    @Html.ValidationSummary(true)
-    <table align="center">
-        <tr style="height:50px;">
-            <td> Tên đăng nhập:</td>
-            <td style="border: 1px solid #ebebeb;width: 500px">
-                @Html.TextBox("TenDn")
-            </td>
-            <td>
-                @ViewData["Loi1"]
-            </td>
-        </tr>
-        <tr style="height:50px">
-            <td align="right"> Mật khẩu:</td>
-            <td style="border: 1px solid #ebebeb;">
-                @Html.Password("Matkhau")
-            </td>
-            <td>
-                @ViewData["Loi2"]
-            </td>
-        </tr>
 
-        <tr style="height:50px">
-            <td></td>
-            <td style="border: 1px solid #ebebeb;text-align:center  ">
-                <button type="submit"><span>Đăng nhập</span></button>
-            </td>
-        </tr>
+<div class="dangnhap">
+    <h5 style="color:red; text-align:center"> @ViewBag.Thongbao</h5>
+    <h4 style="text-align:center">ĐĂNG NHẬP</h4>
 
-    </table>
-}
+    @using (Html.BeginForm())
+    {
+        @Html.ValidationSummary(true)
+
+        <table align="center">
+            <tr>
+                <td class="label">Tên đăng nhập:</td>
+                <td class="input">
+                    @Html.TextBox("TenDn")
+                </td>
+                <td class="error">
+                    @ViewData["Loi1"]
+                </td>
+            </tr>
+            <tr>
+                <td class="label">Mật khẩu:</td>
+                <td class="input">
+                    @Html.Password("Matkhau")
+                </td>
+                <td class="error">
+                    @ViewData["Loi2"]
+                </td>
+            </tr>
+            <tr>
+                <td></td>
+                <td style="text-align:center">
+                    <button type="submit">Đăng nhập</button>
+                </td>
+            </tr>
+        </table>
+    }
+</div>
+
+<style>
+    .dangnhap {
+        margin-top: 20px;
+        text-align: center;
+    }
+
+    table {
+        margin: 0 auto;
+        width: 500px;
+    }
+
+    .label {
+        width: 150px;
+        padding-right: 10px;
+        text-align: right;
+    }
+
+    .input {
+        width: 250px;
+    }
+
+    .error {
+        color: red;
+    }
+
+    button {
+        background-color: #007bff;
+        color: #fff;
+        border: none;
+        padding: 5px 10px;
+        border-radius: 3px;
+        cursor: pointer;
+    }
+</style>
