--- a/Shop/Views/Shared/_Layout.cshtml
+++ b/Shop/Views/Shared/_Layout.cshtml
@@ -51,6 +51,7 @@
                                             <button type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="las la-user-circle"></i> <span>@Session["Name"]</span> <i class="las la-angle-down"></i></button>
                                             <ul class="dropdown-menu height-122px" aria-labelledby="dropdownMenuButton" style="width:170px">
                                                 <li><a href="@Url.Action("ThongTin","Nguoidung")">Thông tin tài khoản</a></li>
+                                                <li><a href="@Url.Action("DoiMatKhau","Nguoidung")">Thay đổi mật khẩu</a></li>
                                                 <li><a href="@Url.Action("Dangxuat","Nguoidung")">Đăng Xuất</a></li>
                                             </ul> }
                                         else
